scripts/nullaway/wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8.txt
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:96: error: [NullAway] dereferenced expression string is @Nullable
        for (int i = 0, len = string.length(); i < len; i++) {
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/XML.java:414: error: [NullAway] passing @Nullable parameter 'v' where @NonNull is required
                b.append(toString(v, (tagName == null) ? "array" : tagName));
                                  ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:211: error: [NullAway] dereferenced expression ja is @Nullable
        for (int i = 0; i < ja.length(); i += 1) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/CDL.java:247: error: [NullAway] dereferenced expression ja is @Nullable
        JSONObject jo = ja.optJSONObject(0);
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:313: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/org/json/Test.java:316: error: [NullAway] dereferenced expression a is @Nullable
            System.out.println(a.toString(4));
                                ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/ShyviewComparator.java:28: error: [NullAway] dereferenced expression unit1 is @Nullable
        unit1 = unit1.substring(firstdif, unit1.length());
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/ShyviewComparator.java:28: error: [NullAway] dereferenced expression unit1 is @Nullable
        unit1 = unit1.substring(firstdif, unit1.length());
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/ShyviewComparator.java:29: error: [NullAway] dereferenced expression unit2 is @Nullable
        unit2 = unit2.substring(firstdif, unit2.length());
                     ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/ShyviewComparator.java:29: error: [NullAway] dereferenced expression unit2 is @Nullable
        unit2 = unit2.substring(firstdif, unit2.length());
                                               ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/ShyviewComparator.java:75: error: [NullAway] dereferenced expression a is @Nullable
        int minlength = (a.length() < b.length()) ? a.length() : b.length();
                          ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/ShyviewComparator.java:75: error: [NullAway] dereferenced expression b is @Nullable
        int minlength = (a.length() < b.length()) ? a.length() : b.length();
                                       ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picture.java:61: error: [NullAway] dereferenced expression swapimage is @Nullable
        if (!swapimage.isDone())
                      ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picture.java:126: error: [NullAway] dereferenced expression swapimage is @Nullable
            if (swapimage.isDone())
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/PicViewGUI.java:331: error: [NullAway] dereferenced expression this.Fullscreen is @Nullable
            this.Fullscreen.remove(picturebox);
                           ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:220: error: [NullAway] dereferenced expression list.getName() is @Nullable
            if (list.getName().equals(listname)) {
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:221: error: [NullAway] dereferenced expression acpic() is @Nullable
                acpic().flush();
                       ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:304: error: [NullAway] dereferenced expression listename is @Nullable
            if (listename.equals(listname))
                         ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:325: error: [NullAway] dereferenced expression acpic() is @Nullable
                image = acpic().getPicture();
                               ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:327: error: [NullAway] dereferenced expression acpic() is @Nullable
                System.out.println(System.currentTimeMillis() + " " + acpic().getName() + " still loading..");
                                                                             ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:604: error: [NullAway] dereferenced expression list.getName() is @Nullable
            if (list.getName().equals(listname))
                              ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/Picturehandler.java:811: error: [NullAway] dereferenced expression acpic() is @Nullable
            ImageIO.write((RenderedImage) acpic().getPicture(), "png", new File(getSubFavoriteFolder(picListIt.current().getName()), acpic().getName()));
                                                 ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/shyview/PictureList.java:27: error: [NullAway] assigning @Nullable expression to @NonNull field
        name = parname;
             ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/MenuScroller/MenuScroller.java:425: error: [NullAway] dereferenced expression menu is @Nullable
            int index = menu.getComponentIndex(item);
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/MenuScroller/MenuScroller.java:474: error: [NullAway] dereferenced expression menu is @Nullable
            menu.removeAll();
                ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/MenuScroller/MenuScroller.java:517: error: [NullAway] dereferenced expression menu is @Nullable
            menuItems = menu.getComponents();
                            ^
    (see http://t.uber.com/nullaway )
../wpi/url30d916877f_shylux_shyview_tgz-pJ8-org_json_TestJ8/src/MenuScroller/MenuScroller.java:529: error: [NullAway] dereferenced expression menu is @Nullable
            menu.removeAll();
                ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
27 errors
